--- a/.github/workflows/blog-post.yml
+++ b/.github/workflows/blog-post.yml
@@ -1,8 +1,8 @@
 name: Blog Posts
 
 on:
-  # schedule:
-  #   - cron: 0 2 * * *
+  schedule:
+    - cron: 0 2 * * *
   workflow_dispatch:
 
 permissions:
@@ -20,3 +20,4 @@ jobs:
         with:
           feed_list: "https://capawesome.io/feed_rss_created.xml"
           readme_path: "./profile/README.md"
+          disable_sort: true
